--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,6 +1,22 @@
 //importr variables
 @import "variables";
 
+*{
+    padding: 0;
+    margin: 0;
+}
+
+ul, ol{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
 .wrapper {
     display: flex;
     width: 100%;
@@ -21,9 +37,38 @@
         scrollbar-width: thin;
         scrollbar-color: #aab7cf transparent;
         height: 100vh;
-        padding-top: 70px;
         @media screen and (min-width: 1200px) {
             left: 0px;
+        }
+        .header-sidebar{
+            border-bottom: 1px solid rgb(255 255 255 / 15%);
+            height: 60px;
+            display: flex;
+            align-items: space-between;
+        }
+        .body-sidebar{
+            .main-menu{
+                .nav-menu{
+                    .nav-item{
+                        .nav-link{
+                            position: relative;
+                            display: flex;
+                            align-items: center;
+                            justify-content: left;
+                            padding: 6px 16px;
+                            font-size: 15px;
+                            color: var(--gray);
+                            outline-width: 0;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            letter-spacing: .5px;
+                            border-radius: 0.25rem;
+                            transition: all .3s ease-out;
+                            font-family: var(--font-roboto);
+                        }
+                    }
+                }
+            }
         }
     }
     .main-content{
