--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -3,4 +3,7 @@
     --semi-light: #F0F3F8;
     --white: #ffffff;
     --black: #000000;
+    --gray: #5f5f5f;
+    --font-roboto: 'Roboto', sans-serif;
 }
+
