--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -32,7 +32,7 @@ a{
         max-width: 61px;
         z-index: 996;
         transition: all 0.3s;
-        padding: 20px 5px 10px 5px;
+        padding: 0 5px 10px 5px;
         overflow-y: auto;
         scrollbar-width: thin;
         scrollbar-color: #aab7cf transparent;
@@ -44,20 +44,41 @@ a{
             border-bottom: 1px solid rgb(255 255 255 / 15%);
             height: 60px;
             display: flex;
-            align-items: space-between;
+            align-items: center;
+            justify-content: space-between;
+            padding: 15px;
+            padding-top: 10px;
+            .logo{
+                height: 40px;
+                img{
+                    height: 100%;
+                    width: auto;
+                }
+            }
+
+            .toggle-menu{
+                border: none;
+                background: none;
+                color: var(--white);
+            }
         }
         .body-sidebar{
             .main-menu{
                 .nav-menu{
                     .nav-item{
+                        margin-bottom: 10px;
+                        &:last-child{
+                            margin-bottom: 0;
+                        }
                         .nav-link{
                             position: relative;
                             display: flex;
                             align-items: center;
                             justify-content: left;
+                            gap: 10px;
                             padding: 6px 16px;
                             font-size: 15px;
-                            color: var(--gray);
+                            color: #5f5f5f;
                             outline-width: 0;
                             text-overflow: ellipsis;
                             overflow: hidden;
@@ -65,7 +86,59 @@ a{
                             border-radius: 0.25rem;
                             transition: all .3s ease-out;
                             font-family: var(--font-roboto);
+                            &:hover{
+                                color: #fff;
+                                text-decoration: none;
+                                background: rgb(255 255 255 / 12%);
+                            }
                         }
+                        &.dropdown{
+                            .dropdown-menu{
+                                list-style: disc;
+                                .dropdown-item{
+                                    margin-bottom: 10px;
+                                    &:last-child{
+                                        margin-bottom: 0;
+                                    }
+                                    .dropdown-link{
+                                        position: relative;
+                                        display: flex;
+                                        align-items: center;
+                                        justify-content: left;
+                                        gap: 20px;
+                                        outline-width: 0;
+                                        text-overflow: ellipsis;
+                                        overflow: hidden;
+                                        letter-spacing: .5px;
+                                        border-radius: 0.25rem;
+                                        transition: all .3s ease-out;
+                                        padding: 6px 15px 6px 20px;
+                                        font-size: 15px;
+                                        border: 0;
+                                        &:hover{
+                                            color: #fff;
+                                            text-decoration: none;
+                                            background: rgb(255 255 255 / 12%);
+                                        }
+                                        &::before{
+                                            content: '';
+                                            display: block;
+                                            width: 10px;
+                                            height: 10px;
+                                            border-radius: 50%;
+                                            border: 2.2px solid var(--quick-silver);
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .nav-item-label{
+                        padding: 20px 15px 10px 5px;
+                        color: #b0afaf;
+                        text-transform: uppercase;
+                        font-size: 12px;
+                        letter-spacing: .5px;
                     }
                 }
             }
@@ -80,8 +153,12 @@ a{
 .header-top{
     height: 60px;
     background-color: var(--white);
-    border-bottom: 1px solid rgb(228 228 228 / 0%);
-    box-shadow: 0 0 2rem 0 rgba(136,152,170,.15);
+    border-bottom: 1px solid rgba(228, 228, 228, 0);
+    box-shadow: 0 0 2rem 0 rgba(136, 152, 170, 0.15);
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 15px;
 }
 
 .body-content{
@@ -111,5 +188,69 @@ a{
     z-index: 3;
     .copy{
         color: var(--black);
+    }
+}
+
+.btn-dropdown{
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    position: relative;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    color: var(--dark-taupe);
+    cursor: pointer;
+    &:active{
+        border: none;
+        outline: none;
+    }
+    img{
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+        object-fit: cover;
+        margin-right: 10px;
+    }
+}
+
+.custom-dropdown-menu{
+    position: relative;
+    width: fit-content;
+    .container-dropdown-menu{
+        position: absolute;
+        display: block;
+        z-index: 1;
+        height: auto;
+        right: 3px;
+        top: 62px;
+        margin: 0;
+        padding: 0;
+        background: #fff;
+        min-width: 170px;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+        .dropdown-link{
+            white-space: nowrap;
+            font-size: 13px;
+            color: #666;
+            border-bottom: 1px solid #ededed;
+            display: block;
+            padding: 10px;
+            transition: all 0.3s;
+            &:hover{
+                color: #ec008c;
+                padding-left: 15px;
+            }
+        }
+        &:before{
+            content: "";
+            position: absolute;
+            top: -10px;
+            right: 30px;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 10px solid #fff;
+        }
     }
 }
