--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -5,5 +5,7 @@
     --black: #000000;
     --gray: #5f5f5f;
     --font-roboto: 'Roboto', sans-serif;
+    --quick-silver: #9ea4aa;
+    --dark-taupe: #413c3c;
 }
 
