--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -77,7 +77,7 @@ a{
                             gap: 10px;
                             padding: 6px 16px;
                             font-size: 15px;
-                            color: #5f5f5f;
+                            color: var(--gray);
                             outline-width: 0;
                             text-overflow: ellipsis;
                             overflow: hidden;
@@ -93,7 +93,11 @@ a{
                         }
                         &.dropdown{
                             .dropdown-menu{
+                                position: static!important;
+                                background-color: transparent;
+                                color: var(--gray);
                                 list-style: disc;
+                                transform: none!important;
                                 .dropdown-item{
                                     margin-bottom: 10px;
                                     &:last-child{
@@ -114,6 +118,7 @@ a{
                                         padding: 6px 15px 6px 20px;
                                         font-size: 15px;
                                         border: 0;
+                                        color: var(--gray);
                                         &:hover{
                                             color: #fff;
                                             text-decoration: none;
@@ -199,7 +204,8 @@ a{
     display: flex;
     align-items: center;
     font-weight: 500;
-    color: var(--dark-taupe);
+    color: var(--dark-taupe)!important;
+    opacity: 1!important;
     cursor: pointer;
     &:active{
         border: none;
@@ -211,6 +217,16 @@ a{
         border-radius: 100px;
         object-fit: cover;
         margin-right: 10px;
+    }
+    &:hover, &:active{
+        color: var(--dark-taupe);
+        opacity: 1;
+    }
+    &:first-child{
+        &:active{
+            color: var(--dark-taupe);
+            opacity: 1;
+        }
     }
 }
 
