--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -321,3 +321,34 @@ a{
         }
     }
 }
+
+.section-login{
+    background-image: url('../images/bg_login.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    .content-login{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .form-login{
+            max-width: 456px;
+            padding: 1.5rem;
+            .form-header{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                row-gap: 10px;
+                .image{
+                    width: auto;
+                    height: 50px;
+                }
+                .title{
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
