--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -4,6 +4,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: var(--font-roboto);
 }
 
 ul, ol{
@@ -231,7 +232,6 @@ a{
     box-shadow: 0 0 2rem 0 rgba(136,152,170,.15);
     background-color: var(--white);
     width: 100%;
-    height: 400px;
 }
 
 .footer{
@@ -334,13 +334,17 @@ a{
         justify-content: center;
         .form-login{
             max-width: 456px;
-            padding: 1.5rem;
+            @media screen and (min-width: 425px) {
+                padding: 1.5rem;
+            }
             .form-header{
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
                 row-gap: 10px;
+                text-align: center;
+                margin-bottom: 20px;
                 .image{
                     width: auto;
                     height: 50px;
@@ -349,6 +353,19 @@ a{
                     margin-bottom: 0;
                 }
             }
+            .flex-horizontal{
+                flex-direction: column;
+                @media screen and (min-width: 425px) {
+                    flex-direction: row;                    
+                }
+            }
         }
     }
+}
+
+.flex-horizontal{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 }
