--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -232,6 +232,7 @@ a{
     box-shadow: 0 0 2rem 0 rgba(136,152,170,.15);
     background-color: var(--white);
     width: 100%;
+    padding: 1.25rem;
 }
 
 .footer{
@@ -372,4 +373,160 @@ a{
 
 .cursor-pointer{
     cursor: pointer;
+}
+
+.search-default{
+    border: 1px solid #dee2e6;
+    border-radius: 0.375rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 0.5;
+    &:focus-within {
+        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, .25) !important;
+    }
+
+    .form-control {
+        border: none;
+        border-radius: 0.375rem;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+
+    .btn {
+        border: none;
+        background-color: transparent;
+
+        &:active {
+            box-shadow: none;
+        }
+    }
+
+    svg{
+        color: #6b7280;
+    }
+}
+
+.table-default{
+    .table{
+        thead{
+            th{
+                text-align: left;
+                padding: 1rem;
+                border: 1px solid #e5e7eb;
+                border-width: 0 0 1px 0;
+                font-weight: 700;
+                color: #374151;
+                background: #f9fafb;
+                border: 1px solid #e5e7eb;
+            }
+        }
+        tbody{
+            color: #4b5563;
+            transition: box-shadow 0.2s;
+            td{
+                padding: 1rem;
+                border: 1px solid #e5e7eb;
+                font-size: 1rem;
+                font-weight: 400;
+                color: #4b5563;
+            }
+            .td-actions{
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                gap: 10px;
+            }
+        }
+    }
+}
+
+.table-container{
+    .table-header{
+        background: #f9fafb;
+        padding: 1.25rem;
+        border: 1px solid #e5e7eb;
+        border-bottom: none;
+    }
+}
+
+.image-with-name{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    img{
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+        object-fit: cover;
+    }
+}
+
+.custom-svg{
+    width: 21px;
+    height: auto;
+}
+
+.btn-component{
+    background-color: transparent;
+
+    &:active {
+        box-shadow: none;
+    }
+    &.red{
+        color: #f5365c;
+        border-color: #f5365c;
+        background-color: #f5365c;
+        &:hover{
+            background-color: #f5365c;
+            color: #fff;
+        }
+    }
+    &.green{
+        color: #2dce89;
+        border-color: #2dce89;
+        background-color: #2dce89;
+        &:hover{
+            background-color: #2dce89;
+            color: #fff;
+        }
+    }
+    &.blue{
+        color: #11cdef;
+        border-color: #11cdef;
+        background-color: #11cdef;
+        &:hover{
+            background-color: #11cdef;
+            color: #fff;
+        }
+    }
+    &.orange{
+        color: #fb6340;
+        border-color: #fb6340;
+        background-color: #fb6340;
+        &:hover{
+            background-color: #fb6340;
+            color: #fff;
+        }
+    }
+    &.dark-blue{
+        color: #172b4d;
+        border-color: #172b4d;
+        background-color: #172b4d;
+        &:hover{
+            background-color: #172b4d;
+            color: #fff;
+        }
+    }
+    &.light{
+        background-color: transparent;
+    }
+    &:not(.light){
+        color: #fff;
+        &:hover{
+            opacity: 0.8;
+        }
+    }
 }
