ajustando o component person e modal

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -661,6 +661,9 @@ a{
             background-color: #f8f9fe;
         }
     }
+    .modal-header{
+        border: none;
+    }
 }
 
 .person-actions-menu{
