--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -405,7 +405,10 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex: 0.5;
+    flex: 1;
+    @media screen and (min-width: 768px) {
+        flex: 0.5;
+    }
     &:focus-within {
         box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, .25) !important;
     }
