adiciona animação no modal

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -777,3 +777,28 @@ a{
         }
     }
 }
+
+.custom-modal{
+    position: fixed;
+    top: 30%;
+    left: 21%;
+    min-width: 75%;
+    z-index: 2222;
+    background: #ccc;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 2rem 0 rgba(136,152,170,.15);
+}
+
+//classe do vue para animar o modal
+.fade-transition-enter-from, .fade-transition-leave-to {
+    opacity: 0;
+}
+
+.fade-transition-enter-to, .fade-transition-leave-from {
+    opacity: 1;
+}
+
+.fade-transition-enter-active, .fade-transition-leave-active {
+    transition: opacity .5s;
+}
