ajusta o visual do modal

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -784,7 +784,7 @@ a{
     left: 21%;
     min-width: 75%;
     z-index: 2222;
-    background: #ccc;
+    background: #f8f9fe;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 0 2rem 0 rgba(136,152,170,.15);
