--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -862,7 +862,7 @@ a{
                             width: 60px;
                             height: 60px;
                             margin: auto;
-                            fill: #4c5258;
+                            color: #4c5258;
                         }
                     }
                     font-size: 16px;
